[master] liked artists implemented
